--- a/Rentacar/src/view/AdminView.form
+++ b/Rentacar/src/view/AdminView.form
@@ -49,6 +49,19 @@
         <properties/>
         <border type="none"/>
         <children>
+          <scrollpane id="791ae" binding="scrl_cars">
+            <constraints>
+              <tabbedpane title="Cars"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="9e5cf" class="javax.swing.JTable" binding="tbl_car">
+                <constraints/>
+                <properties/>
+              </component>
+            </children>
+          </scrollpane>
           <grid id="1fb25" layout-manager="GridLayoutManager" row-count="3" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
