--- a/TourismAgencySystem/src/view/SeasonView.form
+++ b/TourismAgencySystem/src/view/SeasonView.form
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="view.SeasonView">
   <grid id="27dc6" binding="container" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+    <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
@@ -35,7 +35,7 @@
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Start Date"/>
+          <text value="Start Date (yyyy-mm-dd)"/>
         </properties>
       </component>
       <component id="22cf4" class="javax.swing.JLabel" binding="lbl_season_date_end">
@@ -43,7 +43,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="End Date"/>
+          <text value="End Date (yyyy-mm-dd)"/>
         </properties>
       </component>
       <component id="7e9ae" class="javax.swing.JTextField" binding="fld_season_date_start">
