Feat - Add Reservation Feature and Room Filtering Feature.

--- a/TourismAgencySystem/src/view/PensionView.form
+++ b/TourismAgencySystem/src/view/PensionView.form
@@ -30,12 +30,6 @@
           <text value="Hotel ID"/>
         </properties>
       </component>
-      <component id="22748" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-      </component>
       <component id="e781a" class="javax.swing.JButton" binding="btn_pension_save">
         <constraints>
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -55,6 +49,14 @@
       <component id="7d5e2" class="javax.swing.JComboBox" binding="cmb_pension_type">
         <constraints>
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="8e015" class="javax.swing.JTextField" binding="fld_pension_hotel_id">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
         </constraints>
         <properties/>
       </component>
