--- a/TourismAgencySystem/src/view/HotelSaveView.form
+++ b/TourismAgencySystem/src/view/HotelSaveView.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="container" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="500" height="513"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -110,7 +110,7 @@
           </component>
         </children>
       </grid>
-      <grid id="81623" binding="w_right" layout-manager="GridLayoutManager" row-count="8" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="81623" binding="w_right" layout-manager="GridLayoutManager" row-count="15" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -118,71 +118,111 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="61c4d" class="javax.swing.JCheckBox" binding="chck_autopark">
+          <component id="fae1" class="javax.swing.JButton" binding="btn_hotel_save_save">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="14" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <hideActionText value="false"/>
-              <selected value="false"/>
+              <text value="SAVE"/>
+            </properties>
+          </component>
+          <component id="26936" class="javax.swing.JLabel" binding="lbl_hotel_save_autopark">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
               <text value="Autopark"/>
             </properties>
           </component>
-          <component id="dcd47" class="javax.swing.JCheckBox" binding="chck_wifi">
+          <component id="fb7ed" class="javax.swing.JLabel" binding="lbl_hotel_save_wifi">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Wifi"/>
             </properties>
           </component>
-          <component id="82194" class="javax.swing.JCheckBox" binding="chck_pool">
+          <component id="ec928" class="javax.swing.JLabel" binding="lbl_hotel_save_pool">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Pool"/>
             </properties>
           </component>
-          <component id="d3ed1" class="javax.swing.JCheckBox" binding="chck_gym">
+          <component id="d80f9" class="javax.swing.JLabel" binding="lbl_hotel_save_gym">
             <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Gym"/>
             </properties>
           </component>
-          <component id="e741c" class="javax.swing.JCheckBox" binding="chck_concierge">
+          <component id="c9f47" class="javax.swing.JLabel" binding="lbl_hotel_save_concierge">
             <constraints>
-              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Concierge"/>
             </properties>
           </component>
-          <component id="19d25" class="javax.swing.JCheckBox" binding="chck_spa">
+          <component id="6a07b" class="javax.swing.JLabel" binding="lbl_hotel_save_spa">
             <constraints>
-              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Spa"/>
             </properties>
           </component>
-          <component id="d2706" class="javax.swing.JCheckBox" binding="chck_roomservice">
+          <component id="1826" class="javax.swing.JLabel" binding="lbl_hotel_save_room_service">
             <constraints>
-              <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Room Service"/>
             </properties>
           </component>
-          <component id="fae1" class="javax.swing.JButton" binding="btn_hotel_save_save">
+          <component id="9d6d2" class="javax.swing.JComboBox" binding="cmb_hotel_save_autopark">
             <constraints>
-              <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties>
-              <text value="SAVE"/>
-            </properties>
+            <properties/>
+          </component>
+          <component id="2e094" class="javax.swing.JComboBox" binding="cmb_hotel_save_wifi">
+            <constraints>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="261a0" class="javax.swing.JComboBox" binding="cmb_hotel_save_pool">
+            <constraints>
+              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="38f44" class="javax.swing.JComboBox" binding="cmb_hotel_save_gym">
+            <constraints>
+              <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="59770" class="javax.swing.JComboBox" binding="cmb_hotel_save_concierge">
+            <constraints>
+              <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="45a1c" class="javax.swing.JComboBox" binding="cmb_hotel_save_spa">
+            <constraints>
+              <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="21c29" class="javax.swing.JComboBox" binding="cmb_hotel_save_room_service">
+            <constraints>
+              <grid row="13" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
           </component>
         </children>
       </grid>
