--- a/TourismAgencySystem/src/view/RoomSaveView.form
+++ b/TourismAgencySystem/src/view/RoomSaveView.form
@@ -86,24 +86,6 @@
               <text value="Children Price"/>
             </properties>
           </component>
-          <component id="5ab75" class="javax.swing.JComboBox" binding="cmb_roomsave_hotel">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="90fdb" class="javax.swing.JComboBox" binding="cmb_roomsave_pension">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="86dc5" class="javax.swing.JComboBox" binding="cmb_roomsave_season">
-            <constraints>
-              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-          </component>
           <component id="8a4af" class="javax.swing.JComboBox" binding="cmb_roomsave_roomtype">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
@@ -129,6 +111,30 @@
           <component id="c8227" class="javax.swing.JTextField" binding="fld_roomsave_price_children">
             <constraints>
               <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="b7e76" class="javax.swing.JTextField" binding="fld_roomsave_hotel_id">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="ff35c" class="javax.swing.JTextField" binding="fld_roomsave_pension">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="7c6d" class="javax.swing.JTextField" binding="fld_roomsave_season">
+            <constraints>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
@@ -205,14 +211,6 @@
               <text value="Projector"/>
             </properties>
           </component>
-          <component id="fa96a" class="javax.swing.JTextField" binding="fld_roomsave_room_capacity">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
           <component id="93289" class="javax.swing.JTextField" binding="fld_roomsave_room_area">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
@@ -221,45 +219,41 @@
             </constraints>
             <properties/>
           </component>
-          <component id="c44dd" class="javax.swing.JRadioButton" binding="btn_roomsave_tv">
+          <component id="14229" class="javax.swing.JComboBox" binding="cmb_roomsave_tv">
             <constraints>
-              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties>
-              <text value=""/>
-            </properties>
+            <properties/>
           </component>
-          <component id="a6f56" class="javax.swing.JRadioButton" binding="btn_roomsave_minibar">
+          <component id="6f524" class="javax.swing.JComboBox" binding="cmb_roomsave_minibar">
             <constraints>
-              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties>
-              <text value=""/>
-            </properties>
+            <properties/>
           </component>
-          <component id="4948d" class="javax.swing.JRadioButton" binding="btn_roomsave_game_console">
+          <component id="95c2e" class="javax.swing.JComboBox" binding="cmb_roomsave_game_console">
             <constraints>
-              <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties>
-              <text value=""/>
-            </properties>
+            <properties/>
           </component>
-          <component id="f38c6" class="javax.swing.JRadioButton" binding="btn_roomsave_vault">
+          <component id="8c101" class="javax.swing.JComboBox" binding="cmb_roomsave_vault">
             <constraints>
-              <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties>
-              <text value=""/>
-            </properties>
+            <properties/>
           </component>
-          <component id="37ccf" class="javax.swing.JRadioButton" binding="btn_roomsave_projector">
+          <component id="6876c" class="javax.swing.JComboBox" binding="cmb_roomsave_projector">
             <constraints>
-              <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties>
-              <text value=""/>
-            </properties>
+            <properties/>
+          </component>
+          <component id="2f8a5" class="javax.swing.JComboBox" binding="cmb_roomsave_bed_capacity">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
           </component>
         </children>
       </grid>
