--- a/TourismAgencySystem/src/view/SeasonView.form
+++ b/TourismAgencySystem/src/view/SeasonView.form
@@ -22,12 +22,12 @@
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="b18f6" class="javax.swing.JLabel">
+      <component id="b18f6" class="javax.swing.JLabel" binding="lbl_season_hotel_id">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <text value="Hotel ID"/>
         </properties>
       </component>
       <component id="8f24" class="javax.swing.JLabel" binding="lbl_season_date_start">
@@ -69,6 +69,14 @@
         <properties>
           <text value="SAVE"/>
         </properties>
+      </component>
+      <component id="bb141" class="javax.swing.JTextField" binding="fld_season_hotel_id">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
       </component>
     </children>
   </grid>
